# chateqt

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  tox.ini
src/chateqt/: __init__.py
src/chateqt/app/: __init__.py  offline.py  online.py
src/chateqt/core/: __init__.py  _crawler.py  _embeddings.py  _parser.py  _prompt_template.py  _query.py  companies.yaml
tests/: __init__.py
tests/unit/: __init__.py
